# theta-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
.github/workflows/: deploy.yml
backend/: app.py  db.py
backend/a2a/: __init__.py  agent_card.py  executor.py
backend/agent/: agent.py  agent_tool.py  graph_builder.py  graph_state.py  llm.py  mcp_tools.py  memory.py  prompts.py  streaming.py  summarization.py  tools.py  tools_rag.py  utils.py
backend/analysis/: greeks.py  risk.py  strategy.py  volatility.py
backend/api/: chat.py  chat_v1.py  crypto.py  health.py  options.py  options_v1.py  portfolio.py  portfolio_v1.py  routes.py  routes_v1.py  schemas.py  settings.py
backend/data/: binance.py  market.py  (+2 more)
docs/: DEMO.md  api-v1-reference.md  aws-deployment.md  bun-cpu-fix.md  bun-migration.md  bun-upgrade-summary.md  caching-refactor-summary.md  caching-strategy.md  checkpointer.md  data-caching-strategy.md  hmr-troubleshooting.md  makefile-refactor.md  okx-dcd-api-reference.md  options-chain-zero-loading.md  rag-architecture.md  rag-implementation-summary.md  rag-system.md  restful-refactor-plan.md  restful-refactor-summary.md  tradingagents-architecture.md  turbopack-cpu-solution.md  vercel-optimizations.md  zero-loading-fix-verification.md  zero-loading-test-guide.md
frontend/: .gitignore  Dockerfile  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: build_rag_index.py
(+88 files in other folders)
