[project]
name = "thetalab"
version = "0.1.0"
description = "AI-powered options selling assistant — Sell Put & Sell Call theta strategies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "yfinance",
    "scipy",
    "numpy",
    "langchain>=1.2.6",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=1.4.0",
    "python-dotenv>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.22.1",
    "sse-starlette>=3.3.3",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "a2a-sdk",
    "langchain-mcp-adapters>=0.2.2",
]

[project.scripts]
thetalab = "backend.app:main"
